--- a/app/views/prrojects/_list.html.erb
+++ b/app/views/prrojects/_list.html.erb
@@ -6,6 +6,8 @@
 
 </div>
 
+<% if @prrojects.size > 0 %>
+
 <table class="table table-striped">
 
 <thead>
@@ -44,9 +46,7 @@ tenant_prroject_path(prroject, tenant_id: @tenant.id), class: 'main-link' %></td
 
 edit_tenant_prroject_path(prroject, tenant_id: @tenant.id), :class => 'btn btn-default btn-xs' %>
 
-<%= link_to 'Edit Users', users_tenant_prroject_path(prroject, tenant_id: @tenant.id),
 
-:class => 'btn btn-default btn-xs' %>
 
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
 
@@ -70,9 +70,21 @@ tenant_prroject_path(prroject, tenant_id: @tenant.id),
 
 </table>
 
-<%= link_to 'New prroject', new_tenant_prroject_path(tenant_id: @tenant.id),
+<% else %>
+
+<p class="lead">You don't have any projects</p>
+
+<% end %>
+
+<% if (@tenant.can_create_prrojects?) %>
+
+<%= link_to 'New Project',
+
+new_tenant_prroject_path(tenant_id: @tenant.id),
 
 :class => 'btn btn-primary' %>
+
+<% end %>
 
 
 
