--- a/app/views/prrojects/show.html.erb
+++ b/app/views/prrojects/show.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Prroject -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  
 </div>
 
 <dl class="dl-horizontal">
@@ -14,12 +14,12 @@
   <dd><%= @prroject.tenant_id %></dd>
 </dl>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              prrojects_path, :class => 'btn btn-default'  %>
+<%= link_to t('Back to Organization Page', :default => t("helpers.links.back")),
+              root_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_prroject_path(@prroject), :class => 'btn btn-default' %>
+              edit_tenant_prroject_path(@prroject,@prroject.tenant_id), :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              prroject_path(@prroject),
+              tenant_prroject_path(@prroject,@prroject.tenant_id),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
